feat: Label 저장 로직 구현